# fuzzpaint-thumbnailer

./: Cargo.toml  README.md  fuzzpaint.thumbnailer  test.fzp
src/: main.rs
