[package]
name = "fuzzpaint-thumbnailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1.2.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
fast_image_resize = "2.7.3"
png = "0.17.10"
qoi = "0.4.1"

[profile.release]
# Smallest we can get it without reducing compat.
# Results in ~677k, which i'm happy with!
panic = "abort"
strip = true
lto = true
codegen-units = 1
